# BarcodeDetectionHough

./: .clang_complete  .gitignore  CMakeLists.txt  README  example_whitelist.txt  main.cpp  main_movie.cpp  net61x3.net
include/: ArtelabDataset.hpp  HoughTransform.hpp  ImageProcessor.hpp  MLP.hpp  TimeCounter.hpp  WueinsterDataset.hpp  accuracy.hpp  detection.hpp  draw_and_show.hpp  draw_hist.hpp  hough_histogram.hpp  make_patterns.hpp  mlp_threshold.hpp  stats.hpp
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: private.xml
src/: ArtelabDataset.cpp  HoughTransform.cpp  ImageProcessor.cpp  MLP.cpp  TimeCounter.cpp  WueinsterDataset.cpp  accuracy.cpp  detection.cpp  draw_hist.cpp  hough_histogram.cpp  mlp_threshold.cpp
utils-3rdparty/: DirectoryInfo.cpp  DirectoryInfo.hpp  FileInfo.cpp  FileInfo.hpp  TimeCounter.cpp  TimeCounter.hpp  utils.cpp  utils.hpp
